syntax = "proto3";

package menu_service;
option go_package = "gitlab.com/media_park/bnpl-mono-repo/generated/menu_service";

message CreateCategoryRequest {
    string name     = 1;
    string venue_id = 2;
}

message GetCategoryRequest {
    string id = 1;
}

message GetCategoryResponse {
    string id       = 1;
    string name     = 2;
    string venue_id = 3;
}

message ListCategoriesRequest {
    string venue_id = 1;
    int32 limit     = 2;
    int32 page      = 3;
}

message ListCategoriesResponse {
    repeated GetCategoryResponse categories = 1;
    int32 total                             = 2;
}

message UpdateCategoryRequest {
    string id       = 1;
    string name     = 2;
    string venue_id = 3;
}

message DeleteCategoryRequest {
    string id = 1;
}